[package]
name = "core-wasm"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>", "Sören Schwert <soeren@nimiq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }
nimiq-transaction-builder = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "albatross" }

cfg-if = "0.1"
log = "0.4"
wasm-logger = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
hex = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    # 'Document',
    # 'Element',
    # 'HtmlElement',
    # 'Node',
    # 'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
